content and scss header

--- a/index.html
+++ b/index.html
@@ -4,16 +4,54 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>kimMontgomeryProjectOne</title>
+  <title>Novas</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet"> 
+  <link rel="stylesheet" href="styles/style.css">
  
 
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="./index.html">Home</a></li>
-      <li><a href="./contact.html">Contact</a></li>
-    </ul>
-  </nav>
+
+  <header>
+
+      <img src="./assets/logo-black.png" alt="Novas logo">
+      <nav>
+        <ul>
+          <li><a href="./index.html">HOME</a></li>
+          <li><a href="#blog">BLOG</a></li>
+          <li><a href="./contact.html">CONTACT</a></li>
+        </ul>
+      </nav>
+      <img src="./assets/icons/shopping-cart-black-icon.png" alt="checkout icon">
+
+  </header> 
+
+  <main>
+    <!--wrapper-->
+    <section class="gallery" id="gallery">
+		<h2>Featured Sale</h2>
+				<ul>
+					<li><img src="./assets/prod-1.jpg" alt="malm chair"></li>
+          <li><img src="./assets/prod-2.jpg" alt="malm side table"></li>
+          <li><img src="./assets/prod-3.jpg" alt="magnolia ottoman"></li>
+          <li><img src="./assets/prod-4.jpg" alt="malm chair"></li>
+          <li><img src="./assets/prod-5.jpg" alt="pendant lamp"></li>
+          <li><img src="./assets/prod-6.jpg" alt="throw pillow"></li>
+          <li><img src="./assets/prod-7.jpg" alt="printed blanket"></li>
+          <li><img src="./assets/prod-8.jpg" alt="side chair"></li>
+          <li><img src="./assets/prod-9.jpg" alt="candle"></li>
+          <li><img src="./assets/prod-10.jpg" alt="pendant lamp"></li>
+				</ul>
+			</div> <!-- ./wrapper-->
+		</section>
+
+  </main>
+
+  <footer>
+
+  </footer>
+
 </body>
 </html>
