--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>kimMontgomeryProjectOneContact</title>
+  <title>Novas Contact</title>
+  <link rel="stylesheet" href="./style.css">
   
 
 </head>
@@ -12,6 +13,7 @@
   <nav>
     <ul>
       <li><a href="./index.html">Home</a></li>
+      <li><a href="#blog">Blog</a></li>
       <li><a href="./contact.html">Contact</a></li>
     </ul>
   </nav>
