--- a/index.html
+++ b/index.html
@@ -15,17 +15,22 @@
 <body>
 
   <header>
-
-      <img src="./assets/logo-black.png" alt="Novas logo">
+    <div class="navBar">  
+    <img class="logo" src="./assets/logo-black.png" alt="Novas logo">
       <nav>
-        <ul>
+        <ul class="menu">
           <li><a href="./index.html">HOME</a></li>
           <li><a href="#blog">BLOG</a></li>
-          <li><a href="./contact.html">CONTACT</a></li>
+          <li><a href="./contact.html">CONTACT US</a></li>
         </ul>
       </nav>
-      <img src="./assets/icons/shopping-cart-black-icon.png" alt="checkout icon">
+      <img class="checkout" src="./assets/icons/shopping-cart-black-icon.png" alt="checkout icon">
+    </div>
 
+    <div class="about">
+    <h1>NOVAS Boutique Shop</h1> 
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut, magnam inventore ipsa similique nulla itaque quidem quis voluptates voluptate at libero repellat animi quo in minima ipsum minus velit qui!</p>
+    </div>
   </header> 
 
   <main>
