--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
                 <li class="product prodTen">
                   <img src="./assets/prod-10.jpg">
-                  <h4>Lightbulb Planter</h4>
+                  <h4>Lightbulb</h4>
                   <h5>$45</h5>
                   <span><img src="./assets/icons/shopping-cart-black-icon.png" alt="add to cart"></span>
                 </li>
@@ -164,12 +164,12 @@
                 <img src="./assets/vert1.jpg" alt="Sale fifty percent off">
                 <h3>SALE UP TO</h3>
                 <p>50% OFF</p>
-                <span><button>Shop Now</button><span>
+                <span><button>Shop Now </button><span>
               </li>
 
               <li class="sale saleTwo">
                 <img src="./assets/vert2.jpg" alt="Sale thirty percent off">
-                <p>Get 30% Off on Elisa Sofa collection</p>
+                <p>Get <span>30%</span> Off<br> on Elisa Sofa collection</p>
               </li>
 
             </ul>
